# bioparser

./: .gitignore  .travis.yml  CMakeLists.txt  Config.cmake.in  Makefile  README.md  meson.build  meson_options.txt
.github/workflows/: bioparser.yml
include/: meson.build
include/bioparser/: bioparser.hpp  fasta_parser.hpp  fastq_parser.hpp  mhap_parser.hpp  paf_parser.hpp  parser.hpp  sam_parser.hpp
src/: bioparser.hpp  main.cpp
subprojects/: zlib.wrap
test/: bioparser_test.cpp  bioparser_test_config.h.in  config.h.in  fasta_parser_test.cpp  fastq_parser_test.cpp  meson.build  mhap_parser_test.cpp  paf_parser_test.cpp  sam_parser_test.cpp
test/data/: sample.fasta  sample.fastq  sample.paf
